# paramant-sdk

./: .gitignore  AGENTS.md  README.md  RELEASING.md
.github/workflows/: release.yml  test.yml
docs/: README.md
sdk-js/: CHANGELOG.md  README.md  index.d.ts  index.js  package-lock.json  package.json
sdk-js/examples/: basic.mjs  drop.mjs  self_hosted.mjs  streaming.mjs
sdk-js/src/: capabilities.js  wire-format.js
sdk-js/test/: capabilities.test.js  constructor.test.js  crypto.test.js  integration.test.js  security-fixes.test.js  wire-format.test.js
sdk-py/: CHANGELOG.md  README.md  paramant-receipt  paramant_sdk.py  pyproject.toml  requirements.txt
sdk-py/examples/: admin_key_management.py  anonymous_drop.py  basic_send_receive.py  pre_shared_secret.py  self_hosted_relay.py  websocket_streaming.py
sdk-py/paramant/: __init__.py  capabilities.py  client.py  crypto.py  errors.py  wire_format.py
sdk-py/tests/: test_capabilities.py  test_crypto.py  test_sdk_integration.py  test_security_fixes.py  test_wire_format.py
tests/conformance/: README.md  config.mjs  conformance.test.mjs  spec-vectors.mjs
tests/conformance/adapters/: core-adapter.mjs  noble-adapter.mjs  pqcrypto-adapter.py
tests/conformance/lib/: bus.mjs
