[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paramant-sdk"
version = "3.2.0"
description = "Python SDK for PARAMANT — post-quantum file transport (ML-KEM-768 + ML-DSA-65, wire format v1)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["paramant", "post-quantum", "ml-kem", "ml-dsa", "fips203", "fips204", "encryption", "file-transfer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications :: File Sharing",
]
dependencies = [
    "pqcrypto>=0.4,<1.0",
    "cryptography>=43.0.1",
    "requests>=2.33",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.21",
    "responses>=0.24",
]

[project.urls]
Homepage = "https://paramant.app"
Documentation = "https://paramant.app/docs"
Repository = "https://github.com/Apolloccrypt/paramant-sdk"
Changelog = "https://github.com/Apolloccrypt/paramant-sdk/releases"
"Bug Tracker" = "https://github.com/Apolloccrypt/paramant-sdk/issues"

[project.scripts]
paramant-sdk = "paramant_sdk:_cli_main"

[tool.setuptools]
py-modules = ["paramant_sdk"]

[tool.setuptools.packages.find]
where = ["."]
include = ["paramant*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
